--- a/testng/pom.xml
+++ b/testng/pom.xml
@@ -12,6 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <!-- argLine>-Dfile.encoding=UTF-8</argLine>  -->
   </properties>
 
   <dependencies>
@@ -40,5 +41,6 @@
       <version>3.0.6</version>
     </dependency>
   </dependencies>
+
   
 </project>
