--- a/testng/httpclient/pom.xml
+++ b/testng/httpclient/pom.xml
@@ -20,7 +20,14 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpclient</artifactId>
-      <version>4.5.2</version>
+      <version>4.1.2</version>
+      <scope></scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20170516</version>
       <scope></scope>
     </dependency>
     
