--- a/testng/pom.xml
+++ b/testng/pom.xml
@@ -52,5 +52,6 @@
 		<module>httpclient</module>
 		<module>springboot</module>
     <module>mybatis</module>
+    <module>item1</module>
   </modules>
 </project>
